# Catalyst

./: .env.example  .gitattributes  .gitignore  README.md  catalyst.ps1  catalyst.sh
.github/workflows/: pages.yml
code/: .gitignore  install_catalyst.ps1  start_catalyst.ps1  start_recovery_demo.ps1
code/backend/pipeline/: pyproject.toml  requirements-runtime.txt
code/backend/pipeline/catalyst/: __init__.py  agent_loop.py  agent_runtime.py  agent_tools.py  build_processed.py  candidate_sets.py  contracts.py  download.py  elements.py  exporters.py  graph_artifacts.py  local_api.py  local_store.py  phase1.py  preflight.py  research_adapters.py  research_mode.py  research_sources.py  resolver.py  screening.py  session_store.py  settings.py  target_material.py  util.py  validate_recovery.py
code/backend/pipeline/catalyst/providers/: __init__.py  base.py  gemini.py  registry.py
code/backend/pipeline/catalyst/schemas/: __init__.py  edges.py  element.py  material.py
code/backend/pipeline/scripts/: build_graph_artifacts.py  build_resolver.py  check_ship_ready.py  pull_material.py  run_local_api.py  run_phase1.py
code/backend/tests/: test_recovery.py  test_revival_backend_contract.py  test_ship_contract.py
code/frontend/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
data/: README.md
data/local/: settings.example.json
docs/: API_CONTRACT.md  DEMO_PROMPTS.md  DEPLOYMENT.md  README.md  ROOT_LAYOUT.md  RUNBOOK.md  SUBMISSION_PACK.md
scripts/: catalyst.py  update-pages-runtime-config.ps1
(+53 files in other folders)
