[project]
name = "catalyst-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "mp-api>=0.46.0",
    "pydantic>=2.0",
    "pandas>=2.0",
    "pyarrow>=15.0",
    "duckdb>=1.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "pymatgen>=2024.1.1",
    "tqdm>=4.66",
]

[tool.pytest.ini_options]
pythonpath = ["."]
